add auth apis
